adding restorateur & client home pages